# xtdc_babel

./: .gitignore  README.md
.github/workflows/: build_all.yml
include/: TDC4_interface.h  TimeTagger4_interface.h  crono_interface.h  xTDC4_interface.h
lib/: xtdc4_driver_64.lib
lib/x64/: xtdc4_driver_64.lib
timetagger4_user_guide_example/: README.md  timetagger_ug_ex
timetagger4_user_guide_example/driver/include/: TDC4_interface.h
timetagger4_user_guide_example/driver/x64/: timetagger4_user_guide_example
timetagger4_user_guide_example/src/: timetagger4_user_guide_example.cpp
timetagger4_user_guide_example/tools/: CMakeLists.txt
ug_example/include/: CronoCommon.h  TDC4_interface.h  xTDC4_interface.h
ug_example/src/: xtdc4_user_guide_example.cpp
ug_example/tools/: CMakeLists.txt  build_linux.sh  build_windows.bat  conanfile.py
ug_example/tools/conan_utils/: CronoConanBase.py
xTDC4_user_guide_example/: README.md
xTDC4_user_guide_example/driver/x64/: xtdc4_ugex
xTDC4_user_guide_example/src/: xtdc4_user_guide_example.cpp
xTDC4_user_guide_example/tools/: CMakeLists.txt
